# adsb-history-logger

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml  dependabot-auto-merge.yml  release.yml
adsb_history_logger/: aircraft_db.py  db.py  integrate_tar1090.py  logger.py  prune.py  query.py  sbs.py  webapi.py
adsb_history_logger/webui/: history-overlay.css  history-overlay.js
debian/: adsb-history-logger.default  adsb-history-logger.service  adsb-history-prune.service  adsb-history-prune.timer  adsb-history-web.service  changelog  control  copyright  postinst  postrm  rules
tests/: test_aircraft_db.py  test_db.py  test_integrate_tar1090.py  test_logger.py  test_prune.py  test_query.py  test_sbs.py  test_webapi.py
tests-js/: history-overlay.test.js
