[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "adsb-history-logger"
version = "0.1.0"
description = "Local, unfiltered ADS-B position history logger for dump1090-fa/readsb"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "enbay1" }]

[project.scripts]
adsb-history-logger = "adsb_history_logger.logger:main"
adsb-history-query = "adsb_history_logger.query:main"
adsb-history-prune = "adsb_history_logger.prune:main"

[tool.setuptools.packages.find]
include = ["adsb_history_logger*"]
