[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "adsb-history-logger"
version = "0.2.1"
description = "Local, unfiltered ADS-B position history logger for dump1090-fa/readsb"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "enbay1" }]

[project.scripts]
adsb-history-logger = "adsb_history_logger.logger:main"
adsb-history-query = "adsb_history_logger.query:main"
adsb-history-prune = "adsb_history_logger.prune:main"
adsb-history-web = "adsb_history_logger.webapi:main"
adsb-history-integrate-tar1090 = "adsb_history_logger.integrate_tar1090:main"

[tool.setuptools.packages.find]
include = ["adsb_history_logger*"]

[tool.setuptools.package-data]
adsb_history_logger = ["webui/*"]
